src-tauri/tests/snapshots/fidelity__html@note-properties.typ.snap
---
source: tests/fidelity.rs
expression: html.html
input_file: tests/fixtures/fidelity/note-properties.typ
---
<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1"></head><body><h2>Quarterly Field Report</h2><p>The body carries ordinary prose so the <code>#note(...)</code> property block is exercised alongside real content. Properties must round-trip through <code>typst query</code> with stable labels.</p></body></html>
