src-tauri/tests/snapshots/fidelity__metadata@formatting.typ.snap
---
source: tests/fidelity.rs
expression: meta
input_file: tests/fixtures/fidelity/formatting.typ
---
{
  "properties": {
    "title": "Inline formatting"
  },
  "tags": [],
  "links": [],
  "heading_labels": [],
  "agenda": [],
  "recurrence": null,
  "suggestions": 0
}
